[refactor] minor IDE suggestions